<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_temp_unit_label"
        android:key="@string/pref_temp_unit_key"
        android:defaultValue="@string/pref_temp_unit_metric"
        android:entries="@array/temp_units"
        android:entryValues="@array/temp_unit_values"/>

    <CheckBoxPreference
        android:title="@string/pref_notifications"
        android:key="@string/pref_notifications_key"
        android:defaultValue="true"/>

</PreferenceScreen>